added caseworker entity factory added asserts that sort by ID then compare one by one.